6. Istio/vaayadi-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vaayadi-virtualservice
spec:
  hosts:
  - "nodejsping.vaayadi.in"
  gateways:
  - vaayadi-gateway
  http:
  - match:
    - uri:
        prefix: /nodejsping
    route:
    - destination:
        port:
          number: 80
        host: nodejsping
      weight: 20
    - destination:
        port:
          number: 80
        host: echo1
      weight: 80
  - match:
    - uri:
        prefix: /echo1
    # - uri:
    #     prefix: /delay
    route:
    - destination:
        port:
          number: 80
        host: echo1
